# ntbtl

./: .gitignore  CMakeLists.txt
src/engine/: attack_machine.cpp  attack_machine.h  block_machine.h  game_machine.h  input_machine.h  move_machine.cpp  move_machine.h  player_machine.h  state_machine.h
src/front/: key_reader.h  key_writer.h  main.cpp  sample.cpp
src/net/: Design.md  history.cpp  history.h  net_types.cpp  net_types.h  test.cpp  transaction.h
